css: add grid.less

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,8 @@
+// Grid assignments
+@col-padding-left: 15px;
+@col-padding-right: 15px;
 
-// Color assignments 
+// Color assignments
 @font-color: @shark;
 @button-bg: @eastern-blue;
 @main-bg:  @white;
