--- a/less/index.less
+++ b/less/index.less
@@ -6,6 +6,7 @@
 @import "mixins.less";
 @import "reset.less";
 @import "global.less";
+@import "grid.less";
 @import "navigation.less";
 @import "footer.less";
 @import "home-page.less";
