--- a/less/index.less
+++ b/less/index.less
@@ -7,6 +7,7 @@
 @import "reset.less";
 @import "global.less";
 @import "grid.less";
+@import "flex.less";
 @import "navigation.less";
 @import "footer.less";
 @import "home-page.less";
