--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
 // Navigation Styles here
+
+header {
+  nav {
+    h3 {
+      font-size: 4rem;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+      font-size: 1.4rem;
+    }
+  }
+}
