--- a/less/spacing.less
+++ b/less/spacing.less
@@ -2,155 +2,59 @@
   Margin
 */
 
-.m-1 {
-  margin: 5px;
-}
-.my-1 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.mx-1 {
-  margin-right: 5px;
-  margin-left: 5px;
-}
-.mt-1 {
-  margin-top: 5px;
-}
-.mb-1 {
-  margin-bottom: 5px;
-}
-.mr-1 {
-  margin-right: 5px;
-}
-.ml-1 {
-  margin-left: 5px;
-}
+.m-1 { margin: @margin-1; }
+.my-1 { margin-top: @margin-1; margin-bottom: @margin-1; }
+.mx-1 { margin-right: @margin-1; margin-left: @margin-1; }
+.mt-1 { margin-top: @margin-1; }
+.mb-1 { margin-bottom: @margin-1; }
+.mr-1 { margin-right: @margin-1; }
+.ml-1 { margin-left: @margin-1; }
 
 
-.m-2 {
-  margin: 10px;
-}
-.my-2 {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.mx-2 {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-.mt-2 {
-  margin-top: 10px;
-}
-.mb-2 {
-  margin-bottom: 10px;
-}
-.mr-2 {
-  margin-right: 10px;
-}
-.ml-2 {
-  margin-left: 10px;
-}
+.m-2 { margin: @margin-2; }
+.my-2 { margin-top: @margin-2; margin-bottom: @margin-2; }
+.mx-2 { margin-right: @margin-2; margin-left: @margin-2; }
+.mt-2 { margin-top: @margin-2; }
+.mb-2 { margin-bottom: @margin-2; }
+.mr-2 { margin-right: @margin-2; }
+.ml-2 { margin-left: @margin-2; }
 
 
-.m-3 {
-  margin: 30px;
-}
-.my-3 {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-.mx-3 {
-  margin-right: 30px;
-  margin-left: 30px;
-}
-.mt-3 {
-  margin-top: 30px;
-}
-.mb-3 {
-  margin-bottom: 30px;
-}
-.mr-3 {
-  margin-right: 30px;
-}
-.ml-3 {
-  margin-left: 30px;
-}
+.m-3 { margin: @margin-3; }
+.my-3 { margin-top: @margin-3; margin-bottom: @margin-3; }
+.mx-3 { margin-right: @margin-3; margin-left: @margin-3; }
+.mt-3 { margin-top: @margin-3; }
+.mb-3 { margin-bottom: @margin-3; }
+.mr-3 { margin-right: @margin-3; }
+.ml-3 { margin-left: @margin-3; }
 
 
 /*
   Padding
 */
 
-.p-1 {
-  padding: 5px;
-}
-.py-1 {
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-.px-1 {
-  padding-right: 5px;
-  padding-left: 5px;
-}
-.pt-1 {
-  padding-top: 5px;
-}
-.pb-1 {
-  padding-bottom: 5px;
-}
-.pr-1 {
-  padding-right: 5px;
-}
-.pl-1 {
-  padding-left: 5px;
-}
+.p-1 { padding: @padding-1; }
+.py-1 { padding-top: @padding-1; padding-bottom: @padding-1; }
+.px-1 { padding-right: @padding-1; padding-left: @padding-1; }
+.pt-1 { padding-top: @padding-1; }
+.pb-1 { padding-bottom: @padding-1; }
+.pr-1 { padding-right: @padding-1; }
+.pl-1 { padding-left: @padding-1; }
 
 
-.p-2 {
-  padding: 10px;
-}
-.py-2 {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.px-2 {
-  padding-right: 10px;
-  padding-left: 10px;
-}
-.pt-2 {
-  padding-top: 10px;
-}
-.pb-2 {
-  padding-bottom: 10px;
-}
-.pr-2 {
-  padding-right: 10px;
-}
-.pl-2 {
-  padding-left: 10px;
-}
+.p-2 { padding: @padding-2; }
+.py-2 { padding-top: @padding-2; padding-bottom: @padding-2; }
+.px-2 { padding-right: @padding-2; padding-left: @padding-2; }
+.pt-2 { padding-top: @padding-2; }
+.pb-2 { padding-bottom: @padding-2; }
+.pr-2 { padding-right: @padding-2; }
+.pl-2 { padding-left: @padding-2; }
 
 
-.p-3 {
-  padding: 30px;
-}
-.py-3 {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.px-3 {
-  padding-right: 30px;
-  padding-left: 30px;
-}
-.pt-3 {
-  padding-top: 30px;
-}
-.pb-3 {
-  padding-bottom: 30px;
-}
-.pr-3 {
-  padding-right: 30px;
-}
-.pl-3 {
-  padding-left: 30px;
-}
+.p-3 { padding: @padding-3; }
+.py-3 { padding-top: @padding-3; padding-bottom: @padding-3; }
+.px-3 { padding-right: @padding-3; padding-left: @padding-3; }
+.pt-3 { padding-top: @padding-3; }
+.pb-3 { padding-bottom: @padding-3; }
+.pr-3 { padding-right: @padding-3; }
+.pl-3 { padding-left: @padding-3; }
