--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,14 @@
 @col-padding-left: 15px;
 @col-padding-right: 15px;
 
+// Spacing assignments
+@margin-1: 5px;
+@margin-2: 10px;
+@margin-3: 20px;
+@padding-1: 5px;
+@padding-2: 10px;
+@padding-3: 20px;
+
 // Color assignments
 @font-color: @shark;
 @button-bg: @eastern-blue;
