--- a/less/index.less
+++ b/less/index.less
@@ -9,6 +9,7 @@
 @import "grid.less";
 @import "flex.less";
 @import "spacing.less";
+@import "line_breaks.less";
 @import "navigation.less";
 @import "footer.less";
 @import "home-page.less";
