refactor: Home page styles for header

--- a/less/index.less
+++ b/less/index.less
@@ -10,6 +10,7 @@
 @import "flex.less";
 @import "spacing.less";
 @import "line_breaks.less";
+@import "border.less";
 @import "navigation.less";
 @import "footer.less";
 @import "home-page.less";
