--- a/less/index.less
+++ b/less/index.less
@@ -11,6 +11,7 @@
 @import "spacing.less";
 @import "line_breaks.less";
 @import "border.less";
+@import "buttons.less";
 @import "navigation.less";
 @import "footer.less";
 @import "home-page.less";
