--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,10 @@
 // Mixins in here
+
+.btn(@background-color) {
+  background-color: @background-color;
+  padding: 15px 30px;
+  border-radius: 12px;
+  color: #FFF;
+  text-align: center;
+  font-size: 1.6rem;
+}
