--- a/less/variables.less
+++ b/less/variables.less
@@ -16,6 +16,7 @@
 @main-bg:  @white;
 @navigation-border: @silver;
 @footer-bg: @sandy-beach;
+@bg-green: @atoll;
 
 // Colors
 @white: #FFFFFF;
@@ -23,3 +24,4 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+@atoll : #097774;
