--- a/css/index.css
+++ b/css/index.css
@@ -291,6 +291,29 @@ img {
 /*
   Margin
 */
+.m-0 {
+  margin: 0px !important;
+}
+.my-0 {
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+}
+.mx-0 {
+  margin-right: 0px !important;
+  margin-left: 0px !important;
+}
+.mt-0 {
+  margin-top: 0px !important;
+}
+.mb-0 {
+  margin-bottom: 0px !important;
+}
+.mr-0 {
+  margin-right: 0px !important;
+}
+.ml-0 {
+  margin-left: 0px !important;
+}
 .m-1 {
   margin: 5px;
 }
@@ -363,6 +386,29 @@ img {
 /*
   Padding
 */
+.p-0 {
+  padding: 0px !important;
+}
+.py-0 {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+.px-0 {
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+}
+.pt-0 {
+  padding-top: 0px !important;
+}
+.pb-0 {
+  padding-bottom: 0px !important;
+}
+.pr-0 {
+  padding-right: 0px !important;
+}
+.pl-0 {
+  padding-left: 0px !important;
+}
 .p-1 {
   padding: 5px;
 }
@@ -490,5 +536,8 @@ header nav a {
   .row .col-2,
   .row .col-1 {
     width: 100%;
+  }
+  .text-sm-center {
+    text-align: center;
   }
 }
