--- a/less/spacing.less
+++ b/less/spacing.less
@@ -2,6 +2,15 @@
   Margin
 */
 
+.m-0 { margin: 0px !important; }
+.my-0 { margin-top: 0px !important; margin-bottom: 0px !important; }
+.mx-0 { margin-right: 0px !important; margin-left: 0px !important; }
+.mt-0 { margin-top: 0px !important; }
+.mb-0 { margin-bottom: 0px !important; }
+.mr-0 { margin-right: 0px !important; }
+.ml-0 { margin-left: 0px !important; }
+
+
 .m-1 { margin: @margin-1; }
 .my-1 { margin-top: @margin-1; margin-bottom: @margin-1; }
 .mx-1 { margin-right: @margin-1; margin-left: @margin-1; }
@@ -32,6 +41,15 @@
 /*
   Padding
 */
+
+.p-0 { padding: 0px !important; }
+.py-0 { padding-top: 0px !important; padding-bottom: 0px !important; }
+.px-0 { padding-right: 0px !important; padding-left: 0px !important; }
+.pt-0 { padding-top: 0px !important; }
+.pb-0 { padding-bottom: 0px !important; }
+.pr-0 { padding-right: 0px !important; }
+.pl-0 { padding-left: 0px !important; }
+
 
 .p-1 { padding: @padding-1; }
 .py-1 { padding-top: @padding-1; padding-bottom: @padding-1; }
