--- a/less/mobile.less
+++ b/less/mobile.less
@@ -18,4 +18,8 @@
   .btn-green {
     background-color: @eastern-blue;
   }
+
+  .flex-sm-column-reverse {
+    flex-direction: column-reverse;
+  }
 }
