--- a/less/mobile.less
+++ b/less/mobile.less
@@ -22,4 +22,8 @@
   .flex-sm-column-reverse {
     flex-direction: column-reverse;
   }
+
+  .anim-sm-text-shadow-drop-bl {
+    .anim-text-shadow-drop-bl(0.8s);
+  }
 }
