--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,3 +8,18 @@
   text-align: center;
   font-size: 1.6rem;
 }
+
+.anim-text-shadow-drop-bl(@duration) {
+  animation: text-shadow-drop-bl @duration both;
+}
+@keyframes text-shadow-drop-bl {
+  0% {
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  }
+  50% {
+    text-shadow: -4px 4px 4px rgba(0, 0, 0, 0.35);
+  }
+  100% {
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
